fix issue with outline conflicting with border radius on ios

--- a/src/styles/globals/components/buttons/buttons.scss
+++ b/src/styles/globals/components/buttons/buttons.scss
@@ -57,9 +57,6 @@ a:not(.button--type-link) {
 
 .button {
   @include partials.border-radius(constants.$button-border-radius);
-
-  outline-offset: -1 * constants.$button-outline-width;
-
   @include mixins.button-locked-or-loading();
 
   .icon {
